--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
     <meta name="description" content="vladilen, cv, resume">
     <meta name="keywords" content="Это сайт - резюме Владилена Минина">
     <title>Vladilen Resume</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-    <style>
-      body {
-        font-family: "Montserrat", sans-serif;
-      }
-    </style>
   </head>
   <body>
 
@@ -48,7 +38,7 @@
     <table>
       <thead>
         <tr>
-          <th>название</th>
+          <th>Название</th>
           <th>Должность</th>
           <th>Год</th>
         </tr>
