--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <img 
-      src="https://yt3.googleusercontent.com/xJ7g4L_NY84e8Q76ymiuzeeUyXiZFtaYlxLcmTfy_DLwUFrw0vK8-pwZUA5THCJedO262hksXA=s900-c-k-c0x00ffffff-no-rj" 
+      src="./avatar.jpg" 
       alt="Владилен Минин"
       width="200"
     />
